[Java] (Downgraded Java)
- Downgraded Java version from 21 to 17.